--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,14 @@
+MONGODB_VERSION=5.0
+MONGODB_USER=root
+MONGODB_PWD=root
+MONGODB_DATABASE=finder
+
 JWT_SECRET=your_jwt_secret
-SMTP_PASSWORD=
+JWT_SECRET_ACTIVE=your_jwt_secret_activation
 PORT=3000
+
+MAILER_HOST=smtp.gmail.com
+MAILER_PORT=587
+MAILER_SSL=false
+MAILER_USER=
+MAILER_PWD=
