update mailer sendActivation func

--- a/.env.exemple
+++ b/.env.exemple
@@ -8,7 +8,7 @@ JWT_SECRET_ACTIVE=your_jwt_secret_activation
 PORT=3000
 
 MAILER_HOST=smtp.gmail.com
-MAILER_PORT=587
-MAILER_SSL=false
-MAILER_USER=
-MAILER_PWD=
+MAILER_PORT=587 # ou 465
+MAILER_SSL=false # si 465 alors true
+MAILER_USER=your@email.com
+MAILER_PWD=password
