--- a/.env.exemple
+++ b/.env.exemple
@@ -1,11 +1,16 @@
+PORT=3000
+JWT_SECRET=your_jwt_secret
+JWT_SECRET_ACTIVE=your_jwt_secret_activation
+
 MONGODB_VERSION=5.0
 MONGODB_USER=root
 MONGODB_PWD=root
 MONGODB_DATABASE=finder
 
-JWT_SECRET=your_jwt_secret
-JWT_SECRET_ACTIVE=your_jwt_secret_activation
-PORT=3000
+REDIS_VERSION=latest
+REDIS_PORT=6379
+REDIS_HOST=finder-redis
+REDIS_PASSWORD=finder-Azerty.51@
 
 MAILER_HOST=smtp.gmail.com
 MAILER_PORT=587 # ou 465
