--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,16 @@ services:
       - "8082:8081"
     restart: unless-stopped
 
+  finder-redis:
+    image: redis:${REDIS_VERSION}
+    restart: always
+    hostname: ${REDIS_HOST}
+    ports:
+      - '${REDIS_PORT}:6379'
+    volumes:
+      - redis-data:/data
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+
 volumes:
   finder-data:
+  redis-data:
